test/fixtures/configs/pages/get/one/fail/error.js
module.exports = {
  url: '/users/1/projects/1/pages/1',
  method: 'get'
};
